crates/check_cli/tests/snapshots/main_commands_init/does_not_create_config_file_if_jsonc_exists.snap
---
source: crates/check_cli/tests/snap_test.rs
expression: content
---
## `check.jsonc`

```json
{}
```

# Termination Message

```block
configuration ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × It seems that a configuration file already exists
  


```
