crates/check_cli/tests/snapshots/main_commands_init/init_help.snap
---
source: crates/check_cli/tests/snap_test.rs
expression: content
---
# Emitted Messages

```block
Bootstraps a new check project. Creates a configuration file with some defaults.

Usage: init [--jsonc]

Available options:
        --jsonc  Tells Check to emit a `check.jsonc` file.
    -h, --help   Prints help information

```


